--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -279,6 +279,7 @@
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
         <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+        -->
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
         <div class="dots"></div>
@@ -292,7 +293,7 @@
           today!
         </h3>
       </div>
-      <button class="btn btn--show-modal">Open your free account today!</button>
+      <button class="btn btn--show-ƒ">Open your free account today!</button>
     </section>
 
     <footer class="footer">
